# mca-hackathon-2024

./: README.md  package.json  test.html
client/: .env.local.example  package.json  pnpm-lock.yaml
client/src/: App.css  App.tsx  game.tsx  main.tsx  start-page.tsx
client/src/components/ui/: progress.tsx
docs/: README.md  flow-of-information.md
docs/example-clients/elixir/circle_walker/lib/: web_socket_client.ex
docs/example-clients/elixir/circle_walker/websocket_client/: mix.exs
docs/example-clients/html/: index.html
docs/example-clients/node-js/: index.js  package-lock.json  package.json
docs/example-clients/node-js/circle_walker/: index.js  package-lock.json  package.json
docs/example-clients/python/circle_walker/: index.py
docs/game-server/: examples.md  flow-of-information.md
docs/management-api/: README.md  management_api.yaml
docs/management-api/bruno/Management API/: Create Lobby.bru  Get Lobbies.bru  Start Lobby.bru  bruno.json
docs/management-api/bruno/Management API/environments/: Management API local.bru  Management API remote.bru
server/: Cargo.toml  Dockerfile
server/bruno/Management API/: Create Lobby.bru  Get Lobbies.bru  Open Lobby.bru  Start Lobby.bru  Stop Lobby.bru  Update Lobby.bru
server/bruno/Management API/environments/: Management API remote.bru  Management API.bru
server/src/: api_models.rs  client_handling.rs  game.rs  main.rs  management_api.rs  models.rs
