[profile.dev]
opt-level = 1           # Use slightly better optimizations.
overflow-checks = false # Disable integer overflow checks.

[package]
name = "mca-hackathon-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
log = "0.4.17"
futures-util = { version = "0.3.28", default-features = false, features = [
    "sink",
    "std",
] }
tokio-tungstenite = "0.23.1"
env_logger = "0.11.5"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
querystring = "1.1.0"
regex = "1.10.6"
serde_json = "1.0.127"
serde = { version = "1.0.209", features = ["derive"] }
rand = "0.8.5"
warp = "0.3.7"
http = "1.1.0"
line_drawing = "1.0.0"
